--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Pablo - Dev and Designer</title>
   <meta name="description" content="Desenvolvedor FrontEnd e UX/UI Designer, localizado em Paracatu - MG ">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="./Images/Favicon.svg">
+  <link rel="icon" href="./Images/Favicon.svg" type="image/svg+html">
 </head>
 
 <body>
